--- a/src/Components/homepage.css
+++ b/src/Components/homepage.css
@@ -12,3 +12,12 @@
 .home-container h1{
     color: aqua;
 }
+
+.demo-logo{
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, .2);
+  border-radius: 6px;
+  width: 168px;
+  background-image: url(./Assets/OIP\ logo.jpg)
+}
