--- a/src/Components/profilePage.css
+++ b/src/Components/profilePage.css
@@ -17,6 +17,9 @@ body {
 .user-profile {
     border-radius: 5px 0 0 5px;
     padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-block {
@@ -28,6 +31,7 @@ body {
 }
 
 .img-radius {
+    width: 100%;
     border-radius: 5px;
 }
 
